--- a/quadra-translator/index.html
+++ b/quadra-translator/index.html
@@ -3,15 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-
   <title>Quadra Translator</title>
 
   <style>
     :root{
       --bg:#ffffff;
-      --ink:#8fa3ad;         /* azzurro pastello (testo) */
-      --ink-strong:#7f96a1;  /* azzurro più pieno */
-      --line:#c9d6dc;        /* linee soft */
+      --ink:#8fa3ad;
+      --ink-strong:#7f96a1;
+      --line:#c9d6dc;
       --muted:#a6b7bf;
       --pad:28px;
       --mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
@@ -27,7 +26,6 @@
       letter-spacing:0.02em;
     }
 
-    /* top bar */
     header{
       position:sticky; top:0;
       background:rgba(255,255,255,0.92);
@@ -40,9 +38,7 @@
       gap:16px;
       z-index:20;
     }
-    .brand{
-      display:flex; flex-direction:column; gap:4px;
-    }
+    .brand{ display:flex; flex-direction:column; gap:4px; }
     .brand h1{
       margin:0;
       font-size:18px;
@@ -57,7 +53,6 @@
       color:var(--muted);
     }
 
-    /* technical square */
     .tech-btn{
       width:18px; height:18px;
       border:1.5px solid var(--ink);
@@ -66,7 +61,6 @@
     }
     .tech-btn:active{ transform: translateY(1px); }
 
-    /* layout */
     main{
       padding: var(--pad);
       display:grid;
@@ -79,7 +73,6 @@
       .legend{ order:2; }
     }
 
-    /* legend */
     .legend{
       border-left:1px solid #f0f3f5;
       padding-left:16px;
@@ -93,11 +86,7 @@
       font-weight:700;
       color:var(--ink-strong);
     }
-    .legend-list{
-      display:flex;
-      flex-direction:column;
-      gap:10px;
-    }
+    .legend-list{ display:flex; flex-direction:column; gap:10px; }
     .legend-item{
       display:grid;
       grid-template-columns: 68px 1fr;
@@ -114,7 +103,6 @@
       line-height:1.35;
     }
 
-    /* translator */
     .panel{
       display:flex;
       flex-direction:column;
@@ -162,12 +150,8 @@
       cursor:pointer;
       min-width:220px;
     }
-    .btn:disabled{
-      opacity:.45;
-      cursor:not-allowed;
-    }
+    .btn:disabled{ opacity:.45; cursor:not-allowed; }
 
-    /* progress bar */
     .bar-wrap{
       width:100%;
       height:8px;
@@ -183,7 +167,6 @@
       transition: width .18s ease;
     }
 
-    /* output */
     .out{
       margin-top:10px;
       border-top:1px solid #eef2f4;
@@ -242,10 +225,7 @@
       padding:40px;
     }
     .noise.on{ display:flex; }
-    .noise-inner{
-      width:min(860px, 100%);
-      text-align:center;
-    }
+    .noise-inner{ width:min(860px, 100%); text-align:center; }
     .noise-title{
       font-size:76px;
       line-height:0.95;
@@ -263,10 +243,7 @@
       margin:0 0 28px 0;
       white-space:pre-line;
     }
-    .noise-actions{
-      display:flex;
-      justify-content:center;
-    }
+    .noise-actions{ display:flex; justify-content:center; }
     .noise-close{
       border:1.5px solid var(--ink);
       background:transparent;
@@ -281,23 +258,20 @@
       min-width:220px;
     }
 
-    /* svg color match */
-    svg *{ stroke: #000 !important; fill: #000 !important; }
+    /* keep glyphs black for clarity */
+    svg *{ stroke:#000 !important; fill:#000 !important; }
   </style>
 </head>
 
 <body>
-
   <header>
     <div class="brand">
       <h1>quadra translator</h1>
       <div class="sub">italiano → quadra • concetti, non rumore</div>
     </div>
-
     <button class="tech-btn" id="btnTech" aria-label="area tecnica"></button>
   </header>
 
-  <!-- Noise gate -->
   <div class="noise" id="noiseGate" aria-hidden="true">
     <div class="noise-inner">
       <h2 class="noise-title">NO.</h2>
@@ -310,13 +284,11 @@ come back with a thought.</p>
   </div>
 
   <main>
-    <!-- Legend (left) -->
     <aside class="legend">
       <h2>Legenda</h2>
       <div class="legend-list" id="legendList"></div>
     </aside>
 
-    <!-- Translator (right) -->
     <section class="panel">
       <div class="desc">
         Quadra riduce la frase a una composizione di stati, agenzie e relazioni.
@@ -341,7 +313,6 @@ come back with a thought.</p>
     </section>
   </main>
 
-  <!-- glyph lib -->
   <script src="./quadra-glyphs.js"></script>
 
   <script>
@@ -355,58 +326,46 @@ come back with a thought.</p>
 
     const noiseGate = document.getElementById("noiseGate");
     const noiseClose = document.getElementById("noiseClose");
-
     const btnTech = document.getElementById("btnTech");
 
-    // ----- NOISE FILTER -----
     const PROFANITY = [
-      // IT (base)
-      "cazzo","cazzi","cazz*","merda","stronzo","stronzi","troia","puttana","puttane","vaffanculo","porco",
-      // EN (base)
+      "cazzo","cazzi","merda","stronzo","stronzi","troia","puttana","puttane","vaffanculo","porco",
       "fuck","fucking","shit","bitch","asshole","cunt","dick","pussy","wtf","stfu"
     ];
 
     function normalize(s){
       return (s||"")
         .toLowerCase()
-        .normalize("NFD").replace(/[\u0300-\u036f]/g,"")  // remove accents
+        .normalize("NFD").replace(/[\u0300-\u036f]/g,"")
         .replace(/[’']/g,"'")
         .trim();
     }
-
     function containsProfanity(text){
       const t = normalize(text);
-      // parola intera o dentro token
-      return PROFANITY.some(w => t.includes(w.replace("*","")));
+      return PROFANITY.some(w => t.includes(w));
     }
-
     function gibberishToken(tok){
       const t = normalize(tok).replace(/[^a-z]/g,"");
       if(!t) return true;
-      if(t.length >= 4 && !/[aeiou]/.test(t)) return true;       // senza vocali
-      if(/(.)\1\1/.test(t)) return true;                         // ripetizioni aaa
-      if(t.length >= 10 && new Set(t.split("")).size <= 3) return true; // pochissimi caratteri diversi
+      if(t.length >= 4 && !/[aeiou]/.test(t)) return true;
+      if(/(.)\1\1/.test(t)) return true;
+      if(t.length >= 10 && new Set(t.split("")).size <= 3) return true;
       return false;
     }
-
     function isNoise(text){
       const raw = normalize(text);
       if(!raw) return false;
-
       if(containsProfanity(raw)) return true;
 
-      // se contiene troppi caratteri strani
       const nonLetters = raw.replace(/[a-z\s]/g,"").length;
       const total = raw.length;
       if(total >= 8 && (nonLetters/total) > 0.35) return true;
 
       const toks = raw.split(/\s+/).filter(Boolean);
-      if(toks.length === 0) return false;
-
-      const gib = toks.filter(gibberishToken).length;
-      // blocca se la maggioranza è nonsense (evita falsi positivi)
-      if(toks.length >= 2 && (gib / toks.length) >= 0.6) return true;
-
+      if(toks.length >= 2){
+        const gib = toks.filter(gibberishToken).length;
+        if((gib/toks.length) >= 0.6) return true;
+      }
       return false;
     }
 
@@ -421,7 +380,6 @@ come back with a thought.</p>
     noiseClose.addEventListener("click", hideNoiseGate);
     noiseGate.addEventListener("click", (e) => { if(e.target === noiseGate) hideNoiseGate(); });
 
-    // ----- Render helpers (from quadra-glyphs.js) -----
     function renderWords(wordsParsed, targetEl){
       targetEl.innerHTML = "";
       wordsParsed.forEach((w, idx) => {
@@ -442,17 +400,15 @@ come back with a thought.</p>
       });
     }
 
-    // ----- Legend -----
+    // Legend
     const legendList = document.getElementById("legendList");
     const LEGEND_ORDER = [
       ["OGGETTO","entità: oggetto"],
       ["PERSONA","entità: persona"],
       ["LUOGO","entità: luogo"],
       ["CONTENITORE","entità: contenitore"],
-
       ["ATTIVO","agenzia: attivo"],
       ["PASSIVO","agenzia: passivo"],
-
       ["FERMO","stato: fermo"],
       ["MOVIMENTO","stato: movimento"],
       ["APERTO","stato: aperto"],
@@ -460,17 +416,14 @@ come back with a thought.</p>
       ["PIENO","stato: pieno"],
       ["VUOTO","stato: vuoto"],
       ["TRASFORMAZIONE","stato: trasformazione"],
-
       ["DENTRO","spazio: dentro"],
       ["FUORI","spazio: fuori"],
       ["VICINO","spazio: vicino"],
       ["LONTANO","spazio: lontano"],
-
       ["PRESENTE","tempo: presente"],
       ["ASSENTE","tempo: assente"],
       ["INIZIO","tempo: inizio"],
       ["FINE","tempo: fine"],
-
       ["RELAZIONE","relazione"],
       ["CAUSA","logica: causa"],
       ["SCOPO","logica: scopo"],
@@ -478,7 +431,6 @@ come back with a thought.</p>
       ["POSSIBILE","logica: possibile"],
       ["DOVERE","logica: dovere"]
     ];
-
     function renderLegend(){
       legendList.innerHTML = "";
       for(const [tok, label] of LEGEND_ORDER){
@@ -495,13 +447,12 @@ come back with a thought.</p>
       }
     }
 
-    // ----- Progress bar (fake but useful) -----
+    // Progress bar
     let progTimer = null;
     function startProgress(){
       progressBar.style.width = "8%";
       let p = 8;
       progTimer = setInterval(() => {
-        // cresce lentamente fino al 88% finché non arriva risposta
         p = Math.min(88, p + Math.random()*6);
         progressBar.style.width = p.toFixed(0) + "%";
       }, 120);
@@ -513,7 +464,6 @@ come back with a thought.</p>
       setTimeout(() => { progressBar.style.width = "0%"; }, ok ? 500 : 150);
     }
 
-    // ----- API call -----
     async function apiTranslate(text){
       const r = await fetch(`${API_BASE}/translate`, {
         method:"POST",
@@ -545,7 +495,11 @@ come back with a thought.</p>
         endProgress(true);
       }catch(e){
         endProgress(false);
-        errEl.textContent = "Errore API: impossibile tradurre.";
+        if(String(e.message || "").includes("noise_blocked")){
+          showNoiseGate();
+        }else{
+          errEl.textContent = "Errore API: impossibile tradurre.";
+        }
       }finally{
         btnTranslate.disabled = false;
       }
@@ -556,21 +510,11 @@ come back with a thought.</p>
       if((e.metaKey || e.ctrlKey) && e.key === "Enter") doTranslate();
     });
 
-    // ----- Tech area (password) -----
+    // Tech area → tech.html (password gate lì dentro)
     btnTech.addEventListener("click", () => {
-      const pw = prompt("Password area tecnica:");
-      if(pw !== "tecnico"){
-        // se sbaglia: silenzio svizzero
-        return;
-      }
-      // Porta alla pagina tecnica (che già hai nel repo: index tecnico o sezione)
-      // Se tu hai la pagina tecnica separata, metti qui il path corretto:
-      // location.href = "./technical.html";
-      // Per ora: rimani qui e apri la vecchia interfaccia (se esiste) via hash
-      location.href = "./index-tech.html";
+      location.href = "./tech.html";
     });
 
-    // init
     renderLegend();
   </script>
 </body>
